--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
@@ -5,7 +5,7 @@
         <div class="card-header bg-light">
             <h6 class="card-title">
                 <a class="fas fa-sync-alt text-black-50 ControlChartRefresh" href="#"></a>
-                Control chart for alarmobject:
+                <strong>@Model.chartname</strong> Control chart for alarmobject:
                 <strong>@Model.alarmobject.Trim()</strong> c_trigger_id:
                 <strong>@Model.c_trigger_id</strong>
                 <a class="fas fa-wrench text-black-50 ControlChartOptionsPopover" href="#" data-toggle="popover" data-placement="bottom"></a>
