bugfix was reading old controllimits

--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="dropdown-item">
                             <a href="http://gensvw1178.gen.volvocars.net/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats">WeldgunData</a>
                         </li>
+                        <li class="dropdown-item">
+                            <a href="@Url.Action("WeldgunTool", "NgacElectrode", new { area = "Tiplife"}, null)">NEW! WeldgunData</a>
+                        </li>
                         <li class="dropdown-divider"></li>
                         <li class="dropdown-item">
                             <a href="http://gensvw1178.gen.volvocars.net/EqUi_DigibordLauncher/EqUiDigibordLauncher.application">Start DigiboardLauncher</a>
