Moved Area GADATA to => Supervision. this will cause a lot of shit :)

--- a/EqUiWebUi/Areas/Supervision/Views/Table/_ploegRapportGrid.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/_ploegRapportGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.Gadata.PloegRaport_dummy>
+﻿@model IEnumerable<EqUiWebUi.Areas.Supervision.PloegRaport_dummy>
 
 @Html.Grid(Model).Named("PloegRapportGrid").Build(columns =>
 {
