--- a/EqUiWebUi/Areas/Supervision/Views/Table/_supervisieGrid.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/_supervisieGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EqUiWebUi.Areas.Gadata.SupervisieDummy>
+﻿@model List<EqUiWebUi.Areas.Supervision.SupervisieDummy>
 
 @Html.Grid(Model).Named("SupervisieGrid").Build(columns =>
 {
