--- a/EqUiWebUi/Views/Home/TestPage.cshtml
+++ b/EqUiWebUi/Views/Home/TestPage.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@{
+    ViewBag.Title = "TestPage";
+}
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
