--- a/EqUiWebUi/Areas/Supervision/Views/Table/Supervisie.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/Supervisie.cshtml
@@ -5,6 +5,7 @@
     <div class="card-header bg-dark text-white">
         <h4>
             Supervisie
+            <a class="fas fa-info-circle text-white" id="LegendPopover" href="#" data-container="body" data-toggle="popover" data-placement="bottom"></a>
         </h4>
     </div>
     <div id="SupervisieGridSpincontainer" style="position:relative">
@@ -51,6 +52,20 @@
         $('#MyModal').on('hidden.bs.modal', function (e) {
             $('#MyModal').html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-4x fa-fw text-white' ></i ><span class='sr-only'>Loading...</span></div >");
         });
+
+        
+        //enable popover for legend
+        $("#LegendPopover").popover({
+            html: true,
+            content: function () {
+                return $.ajax({
+                    url: '@Url.Action("_legend")',
+                    dataType: 'html',
+                    async: false
+                }).responseText;
+            }
+        });
+
 
         //full with screen
         $("#allcontent").removeClass("body-content");
