cleaned hangfire stuff :)

--- a/EqUiWebUi/Areas/HangfireArea/Views/Job/_settings.cshtml
+++ b/EqUiWebUi/Areas/HangfireArea/Views/Job/_settings.cshtml
@@ -10,7 +10,7 @@
         <p>@MyFilters.IconActionLink("/HangfireArea/job/ConfiureBackgroundJobs", "fas fa-power-off", "Reset hangfire configuration", "Resets the hangfire reocurring job configuration (don't touch it!)", classes: "text-danger JQresultTriggerBtn")</p>
         @MyHtmlHelpers.EquiLink("/HangfireArea/c_schedule/index", "fas fa-calendar-plus", "Hangfire schedules", helperText: "Setup hangfire reocurring jobs to perform tasks ie: alerts, houskeeping, background job")
         <p>@MyFilters.IconActionLink("/HangfireArea/c_job/index", "fas fa-list-ul", "List all background jobs", "sql commands that need to be run from time to time")</p>
-        <p>@MyFilters.IconActionLink("/c_housekeeping/c_job/index", "fas fa-broom", "List all housekeeping jobs", "cleaning of datatables")</p>
-        <p>@MyFilters.IconActionLink("/Alert/c_trigger/index", "fas fa-bell", "List all alert jobs", "alert triggers")</p>
+        <p>@MyFilters.IconActionLink("/c_housekeeping/index", "fas fa-broom", "List all housekeeping jobs", "cleaning of datatables")</p>
+        <p>@MyFilters.IconActionLink("/Alert/c_triggers/index", "fas fa-bell", "List all alert jobs", "alert triggers")</p>
     </div>
 </div>
