--- a/EqUiWebUi/Areas/HangfireArea/Views/c_schedule/Index.cshtml
+++ b/EqUiWebUi/Areas/HangfireArea/Views/c_schedule/Index.cshtml
@@ -18,16 +18,45 @@
     columns.Add(c => c.description).Titled("description");
     columns.Add(c => c.jcron).Titled("jcron");
     columns.Add(c => c.runContinues).Titled("runContinues");
-    columns.Add(c => c.id)
+    columns.Add(c => c)
             .Titled("")
             .Encoded(false)
-            .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id }) + " | " +
-                             @Html.ActionLink("Delete", "Delete", new { id = c.id })
+            .RenderedAs(c => @MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "").ToHtmlString() +
+                             @MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString()
             ).Filterable(false);
 }).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
 
 @section scripts{
     <script>
+       //subscribe to row clicked events
+        $('[data-name="c_schedule"]').mvcgrid({
+            rowClicked: function (row, data, e) {
+                //ignore clicks not on td
+                console.log(e.target.tagName);
+                if (e.target.tagName.toUpperCase() != 'TD') {
+                    return;
+                }
+                //if row already has this class close the modal
+                if ($(row).hasClass("bg-info")) {
+                    $("#placeholder").remove();
+                    $(row).removeClass("bg-info");
+                    return;
+                }
+                //clear selected rows for this table
+                $('tr').removeClass('bg-info'); //THIS IS WRONG
+                $(row).addClass("bg-info");
+                $("#placeholder").remove(); //clear placeholder is exists
+                //add new placeholder afhter selected row
+                $(row).after('<tr id="placeholder"><td colspan="1000"><div class="card border-info"><div class="card-body" id ="placeholderPartial"></div></div></td></tr>');
+                //animation
+                $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
+                //load url in placeholder
+                console.log(data);
+                var url = "@Url.Action("_JobList")?c_schedule_id=" + data["id"];
+                $("#placeholderPartial").load(url);
+            }
+        });
+
         //full with screen
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
